--- a/catagoriesCrab.html
+++ b/catagoriesCrab.html
@@ -27,14 +27,14 @@
           <div class="menu text-right">
           <ul>
               <li>
-                  <a href="index.html">Home</a>
+                  <a href="index.php">Home</a>
               </li>
               <li>
-                    <a href="#">About us</a>
+                  <a href="shop.php">Shops</a>
               </li>
               <li>
-                  <a href="#">Shops</a>
-              </li>
+                <a href="#">About us</a>
+            </li>
               <li>
                   <a href="Contact.html">Contact</a>
               </li>
